fix: avoid horizontal scrolling

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -15,6 +15,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 main {
